css/style.styl
@import "../node_modules/flexiblegs-stylus/flexiblegs-stylus"

millennial = #025D8C
walken = #DADBDE
world = #02517A

vendor(prop, args)
	-webkit-{prop} args
	   -moz-{prop} args
	    -ms-{prop} args
	     -o-{prop} args
	        {prop} args

animation()
	vendor("animation", arguments)

border-radius()
	vendor("border-radius", arguments)

box-shadow()
	vendor("box-shadow", arguments)

text-shadow()
	vendor("text-shadow", arguments)

transition()
	vendor("transition", arguments)

transform()
	vendor("transform", arguments)

transform-origin()
	vendor("transform-origin", arguments)

user-select()
	vendor("user-select", arguments)

background-linear-gradient(startPoint, startColor, startInterval, endColor, endInterval, deprecatedWebkitStartPoint = false, deprecatedWebkitEndPoint = false)
	background-color startColor
	if deprecatedWebkitStartPoint && deprecatedWebkitEndPoint
		background-image -webkit-gradient(linear, deprecatedWebkitStartPoint, deprecatedWebkitEndPoint, color-stop(startInterval, startColor), color-stop(endInterval, endColor))
	background-image -webkit-linear-gradient(startPoint, startColor startInterval, endColor endInterval)
	background-image -moz-linear-gradient(startPoint, startColor startInterval, endColor endInterval)
	background-image -ms-linear-gradient(startPoint, startColor startInterval, endColor endInterval)
	background-image -o-linear-gradient(startPoint, startColor startInterval, endColor endInterval)
	background-image linear-gradient(startPoint, startColor startInterval, endColor endInterval)
	
@keyframes showLeft
	from
		left -100px
		opacity 0
	to
		left 0px
		opacity 1
		
body
	wrap()
	wrap("flexbox")
	wrap("top")
	background-color white
	font-family "Titillium Web", sans-serif
	height 100%
	margin 0
	padding 0
	width 100%

	@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
		wrap("normal")
	
html
	height 100%
	width 100%
	
.content
	col()
	col(5,7)
	background rgb(228, 228, 228)
	height 100%
	overflow-y auto
	padding 1rem 2.5rem

	@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
		col(1,1)
		font-size 1.5rem
	
	.archive
		padding 1rem
		
		article
			color darken(walken, 50%)
			padding 1rem 0
			border-bottom 1px solid walken
			
			&:last-child
				border-bottom 0
			
			h3
				color darken(walken, 90%)
				font-weight 600
				line-height 1rem
				margin 1rem 0

			.date
				display block
				font-size 12px
	
	.site-nav
		ul
			list-style none
			margin 0
			padding 0
			
			li
				display inline-block
				
				a
					border-bottom 1px solid white
					color darken(walken, 50%)
					display block
					padding 1.5rem 1rem
					text-decoration none !important
					
					&:hover, &.active
						border-bottom 1px solid world
						color world
						
	.about
		h3
			color millennial
			margin 0.5rem 0
			text-transform uppercase

			@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
				font-size 2rem
			
			span
				display inline-block
				margin-right 1rem
				vertical-align middle
			
		.cols
			wrap()
			wrap("flexbox")
			wrap("top")
			
			.one_of_two
				col()
				col(1,2)

				@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
					col(1,1)
					font-size 2rem
				
		.education
			color darken(walken, 50%)
			list-style none
			margin 0
			padding 0
			
			li
				padding 0.5 rem
				
			.title
				color darken(walken, 90%)
				font-weight bold
			
		.experience
			border-collapse collapse
			color darken(walken, 50%)
			
			td
				padding 0.5rem 1rem
				vertical-align top
				
			.key
				min-width 200px

				@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
					font-size 1.75em
					max-width 240px
					word-wrap break-word
				
			.title
				color darken(walken, 90%)
				font-weight bold

		.resume-area
			background white
			box-shadow(2px 2px 5px rgba(black,0.15))
			margin 1.5rem 0
			padding 1.5rem

			&.abstract
				text-align justify

.kevin
	col()
	col(2,7)
	background-linear-gradient(bottom, darken(world, 5%), 0%, darken(world, 35%), 100%)
	box-shadow(0 0 20px 5px rgba(black, 50%))
	height 100%
	overflow-y hidden
	position relative

	@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
		col(1,1)
		box-shadow(none)
	
	.intro
		background-linear-gradient(top, transparent, 0%, rgba(millennial, 0.75), 100%)
		color darken(walken, 5%)
		font-size 14px
		padding 2rem 2rem 0.5rem
		position absolute
		text-align center
		text-shadow( 2px 2px 5px rgba(black, 0.5))
		bottom 0px

		@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
			font-size 2.5em
		
		h2, h3
			color white
			line-height 1rem
			margin 0.75rem 0

			@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
				line-height 1em
			
		h2
			font-size 26px

			@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
				font-size 2em
			
		h3
			font-weight 600
			
		.hire
			background transparent
			border 2px solid white
			border-radius(2rem)
			color white
			cursor pointer
			display inline-block
			margin 1rem auto
			padding 0.75rem 2rem
			text-decoration none
			text-shadow( none )

			@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
				font-size 4rem
			
			&:hover
				background white
				color black
				font-weight bold
	
	.logo
		background url("/img/ninja.png") center no-repeat
		background-size contain
		height 75px
		left 50%
		margin-left -105px
		position absolute
		top 20px
		width 210px

		@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
			height 200px
	
	.photo
		background url("/img/i.png") center bottom no-repeat
		background-size contain
		bottom -110px
		filter opacity(70%)
		height 100%
		left 2%
		position absolute
		width 96%

		@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
			bottom -250px

	.social
		left 0
		position absolute
		top 110px
		width 100%

		@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
			top 250px
		
		ul
			list-style none
			margin 0
			padding 0
			text-align center
			
			li
				display inline-block
				font-size 1.5rem
				padding 0.5rem 0.75rem

				@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
					font-size 8rem
				
				a
					color white
					text-decoration none
					
					&:hover
						text-shadow(0 0 5px rgba(black,0.5))

.skills
	color darken(walken, 50%)
	list-style none
	margin 0
	padding 0
	
	li
		padding 0.5rem

		@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
			font-size 2.5rem

	&.badge
		text-align center
		
		li
			background walken
			border-radius(1rem)
			display inline-block
			margin 0.5rem
			padding 0 1rem

			span
				border-right 3px solid white
				margin 0 0.5rem 0 0
				padding 0 0.5rem 0 0
		
	.bar
		background walken
		border-radius( 4px )
		height 8px
		margin 0.5rem 0
		overflow hidden

		@media only screen and (min-device-width: 320px) and (max-device-width: 667px) and (orientation: portrait)
			border-radius(2rem)
			height 1rem
		
		.progress
			background lighten(millennial, 20%)
			height 100%
			width 50%
			
			&._25
				width 25%
				
			&._75
				background lighten(millennial, 25%)
				width 75%
				
			&._85
				background lighten(millennial, 30%)
				width 90%
				
			&._95
				background lighten(millennial, 35%)
				width 95%
				
			&.complete
				background lighten(millennial, 40%)
				width 100%

